--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -15,6 +15,13 @@ input {
   padding: 0.25rem;
 }
 
+h1,
+h2,
+button {
+  font-family: cursive;
+  color: cornflowerblue;
+}
+
 ul {
   padding: 0;
 }
