--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -1,5 +1,10 @@
 body {
   font-family: verdana;
+  background-image: radial-gradient(
+    circle farthest-corner at 1.3% 2.8%,
+    rgba(239, 249, 249, 1) 0%,
+    rgba(182, 199, 226, 1) 100.2%
+  );
 }
 #content {
   display: flex;
@@ -19,7 +24,17 @@ h1,
 h2,
 button {
   font-family: cursive;
-  color: cornflowerblue;
+  font-size: 2em;
+  background: -webkit-linear-gradient(#eee, #333);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+button:hover {
+  background-image: radial-gradient(
+    circle farthest-corner at 10% 20%,
+    rgba(90, 92, 106, 1) 0%,
+    rgba(32, 45, 58, 1) 81.3%
+  );
 }
 
 ul {
